Changed alignment of slideshow controls to prevent wrapping oddities

--- a/site/assets/css/kbp-internal.scss
+++ b/site/assets/css/kbp-internal.scss
@@ -140,8 +140,15 @@ article .content {
 }
 
 .slideshowControls {
-    margin-left: calc(20vw + 1rem);
-    width: calc(100% - 20vw - 1rem);
+    width: 100%;
+    display: block;
+    text-align: right;
+}
+
+.slideControl {
+    display: inline-block;
+    text-indent: 999em;
+    overflow: hidden;
 }
 
 .slide .vertical {
@@ -175,7 +182,7 @@ article .content {
 }
 
 #overlay .slideshowControls {
-    justify-content: center;
+    text-align: center;
     margin: 0;
     width: auto;
 }
